<resources>
    <string name="app_name">BBC News</string>
    <string name="login">Login</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="remember">Remember</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="sign_up">Sign Up</string>
    <string name="bbc_news">BBC News</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="news_details_title">News Title</string>
    <string name="bbc_news_app">BBC News App</string>
    <string name="use_your_fingerprint_to_login">Use your fingerprint to login</string>
    <string name="publish_date">publish date</string>
    <string name="some_title">Russian gallery security guard accused of drawing eyes on painting</string>
    <string name="some_content">Image source, The Art Newspaper Russia Image caption, The security guard allegedly drew eyes in ballpoint pen on two of the three figures in the painting A Russian art gallery guard has been accuse… [+2032 chars]</string>
    <string name="author">Author</string>
    <string name="news_title">News Title</string>
    <string name="news_descriptions">News Descriptions</string>
    <string name="quit_message">Please click back again to exit</string>
    <string name="some_desc">Here is some descriptions</string>
</resources>